@@ -73,6 +73,7 @@ typedef enum _GstTTMLLengthUnit {
   GST_TTML_LENGTH_UNIT_NOT_PRESENT = 0,
   GST_TTML_LENGTH_UNIT_PIXELS,
   GST_TTML_LENGTH_UNIT_CELLS,
+  GST_TTML_LENGTH_UNIT_EM,
   GST_TTML_LENGTH_UNIT_RELATIVE,
   GST_TTML_LENGTH_UNIT_UNKNOWN
 } GstTTMLLengthUnit;
